--- a/style.css
+++ b/style.css
@@ -74,9 +74,6 @@ nav ul li {
   color: white;
   transition: 0.3s;
 }
-nav ul li:hover {
-  font-weight: bold;
-}
 @media (width < 500px) {
   nav ul li {
     margin: 10px;
@@ -518,4 +515,37 @@ nav button::after {
 }
 nav button:active {
   --border-width: 5px;
+}
+
+nav li {
+  position: relative;
+}
+nav li::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: rgb(165, 180, 252);
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-70%);
+  opacity: 0;
+}
+nav li:hover::after {
+  animation: navTranslation 0.2s forwards;
+}
+
+@keyframes navTranslation {
+  0% {
+    transform: translateX(-90%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-70%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(-50%);
+    opacity: 1;
+  }
 }/*# sourceMappingURL=style.css.map */
