--- a/styles/_effects.scss
+++ b/styles/_effects.scss
@@ -141,3 +141,39 @@ nav {
   }
 }
 
+nav {
+  li {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: var.$color1;
+      bottom: -5px;
+      left: 50%;
+      transform: translateX(-70%);
+      opacity: 0;
+    }
+
+    &:hover::after {
+      animation: navTranslation 0.2s forwards; //
+    }
+  }
+}
+
+@keyframes navTranslation {
+  0% {
+    transform: translateX(-90%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-70%);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateX(-50%);
+    opacity: 1;
+  }
+}
