--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ body {
   .section-1 .main-container {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: none;
+    margin-bottom: 50px;
   }
 }
 .section-1 .main-container .container-left {
@@ -146,6 +147,12 @@ body {
   .section-1 .main-container .container-left {
     align-items: center;
     order: 2;
+    margin: 50px 0;
+  }
+}
+@media (width < 500px) {
+  .section-1 .main-container .container-left .left-text {
+    padding-bottom: 20px;
   }
 }
 .section-1 .main-container .container-right {
