update style.css and style.css.map

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -52,7 +52,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -108,7 +108,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -198,7 +198,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -291,7 +291,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -361,7 +361,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
@@ -400,7 +400,7 @@ html {
 
 body {
   background-color: rgb(1, 0, 3);
-  background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");
+  background-image: url("../img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
 
