--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -6,7 +6,7 @@ nav {
   z-index: 100;
   ul {
     background-color: #010003;
-    background-image: url("https://www.transparenttextures.com/patterns/black-orchid.png");    display: flex;
+    background-image: url("./img/black-orchid.png");    display: flex;
     justify-content: center;
     align-items: center;
     li {
