--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -28,6 +28,6 @@ $font3: CardoRegular;
 
 body {
     background-color: $color2;
-    background-image: url("../img/black-orchid.png");
+    background-image: url("./img/black-orchid.png");
   font-family: Montserrat, Courier, monospace;
 }
