--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -6,6 +6,7 @@ footer{
         color: whitesmoke;
         padding: 20px;
         border-top: 1px solid var.$color1;
+        font-size: 0.8rem;
         i{
             font-size: 0.6rem;
         }
