--- a/styles/_section-1.scss
+++ b/styles/_section-1.scss
@@ -11,6 +11,7 @@
     justify-items: center;
     margin: 0 auto;
     width: 90%;
+    max-width: 1500px;
     @media (width < 500px) {
       grid-template-rows: 1fr 1fr;
       grid-template-columns: none;
