--- a/style.css
+++ b/style.css
@@ -315,6 +315,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 40%;
+  max-width: 500px;
   margin: auto;
   margin-top: 100px;
 }
@@ -333,6 +334,7 @@ body {
   margin: 0 auto;
   color: rgb(165, 180, 252);
   font-family: CardoItalic;
+  text-align: center;
 }
 .section-3 .message span {
   text-decoration: underline;
