--- a/styles/_section-3.scss
+++ b/styles/_section-3.scss
@@ -17,6 +17,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       width: 40%;
+      max-width: 500px;
       margin: auto;
       margin-top: 100px;
       i {
@@ -36,6 +37,7 @@
     margin: 0 auto;
     color: var.$color1;
     font-family: var.$font2;
+    text-align: center;
     span{
         text-decoration: underline;
     }
