--- a/Portfolio_v3t/src/styles/output.css
+++ b/Portfolio_v3t/src/styles/output.css
@@ -1225,6 +1225,10 @@ input:checked + .toggle-bg {
   width: 20rem;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
 .max-w-60 {
   max-width: 15rem;
 }
@@ -1302,6 +1306,14 @@ input:checked + .toggle-bg {
 
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .content-center {
@@ -1439,6 +1451,11 @@ input:checked + .toggle-bg {
 .border-sky-500 {
   --tw-border-opacity: 1;
   border-color: rgb(14 165 233 / var(--tw-border-opacity));
+}
+
+.border-sky-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(3 105 161 / var(--tw-border-opacity));
 }
 
 .bg-blue-600 {
@@ -1755,6 +1772,11 @@ input:checked + .toggle-bg {
   border-color: rgb(3 105 161 / var(--tw-border-opacity));
 }
 
+.hover\:border-sky-500:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
+}
+
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 66 159 / var(--tw-bg-opacity));
@@ -1913,6 +1935,12 @@ input:checked + .toggle-bg {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+@media not all and (min-width: 1024px) {
+  .max-lg\:grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+}
+
 @media not all and (min-width: 640px) {
   .max-sm\:flex-col-reverse {
     flex-direction: column-reverse;
@@ -1940,6 +1968,18 @@ input:checked + .toggle-bg {
     margin: 5rem;
   }
 
+  .lg\:w-56 {
+    width: 14rem;
+  }
+
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:p-10 {
     padding: 2.5rem;
   }
@@ -1948,6 +1988,14 @@ input:checked + .toggle-bg {
 @media (min-width: 1280px) {
   .xl\:w-1\/2 {
     width: 50%;
+  }
+
+  .xl\:w-80 {
+    width: 20rem;
+  }
+
+  .xl\:p-10 {
+    padding: 2.5rem;
   }
 }
 
