--- a/Portfolio_v3t/src/styles/output.css
+++ b/Portfolio_v3t/src/styles/output.css
@@ -1121,6 +1121,18 @@ input:checked + .toggle-bg {
   z-index: 50;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-span-1 {
+  grid-row: span 1 / span 1;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
@@ -1133,9 +1145,8 @@ input:checked + .toggle-bg {
   margin: 1.25rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.m-2 {
+  margin: 0.5rem;
 }
 
 .my-2 {
@@ -1195,12 +1206,20 @@ input:checked + .toggle-bg {
   height: 1rem;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
 .h-9 {
   height: 2.25rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .h-full {
@@ -1211,6 +1230,23 @@ input:checked + .toggle-bg {
   height: 100vh;
 }
 
+.h-60 {
+  height: 15rem;
+}
+
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
 .max-h-64 {
   max-height: 16rem;
 }
@@ -1219,12 +1255,12 @@ input:checked + .toggle-bg {
   width: 50%;
 }
 
-.w-28 {
-  width: 7rem;
-}
-
 .w-4 {
   width: 1rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-64 {
@@ -1235,8 +1271,28 @@ input:checked + .toggle-bg {
   width: 18rem;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-60 {
   max-width: 15rem;
+}
+
+.max-w-0 {
+  max-width: 0px;
+}
+
+.max-w-0\.5 {
+  max-width: 0.125rem;
+}
+
+.max-w-96 {
+  max-width: 24rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .flex-1 {
@@ -1314,6 +1370,22 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-4 {
+  grid-template-rows: repeat(4, minmax(0, 1fr));
+}
+
 .content-center {
   align-content: center;
 }
@@ -1352,6 +1424,10 @@ input:checked + .toggle-bg {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1494,6 +1570,10 @@ input:checked + .toggle-bg {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-gradient-texture {
   background-image: linear-gradient(to right, #0f172a, #030712), url('../img/black-orchid.png');
 }
@@ -1564,6 +1644,11 @@ input:checked + .toggle-bg {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-5 {
@@ -1667,8 +1752,9 @@ input:checked + .toggle-bg {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .decoration-blue-400 {
@@ -1697,6 +1783,27 @@ input:checked + .toggle-bg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-indigo-500\/50 {
+  --tw-shadow-color: rgb(104 117 245 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-sky-500 {
+  --tw-shadow-color: #0ea5e9;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-sky-500\/50 {
+  --tw-shadow-color: rgb(14 165 233 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .outline {
@@ -1930,11 +2037,17 @@ input:checked + .toggle-bg {
   }
 }
 
-@media not all and (min-width: 640px) {
-  .max-sm\:m-5 {
-    margin: 1.25rem;
+@media not all and (min-width: 768px) {
+  .max-md\:w-20 {
+    width: 5rem;
   }
 
+  .max-md\:w-36 {
+    width: 9rem;
+  }
+}
+
+@media not all and (min-width: 640px) {
   .max-sm\:mx-5 {
     margin-left: 1.25rem;
     margin-right: 1.25rem;
@@ -1942,6 +2055,10 @@ input:checked + .toggle-bg {
 
   .max-sm\:flex-col-reverse {
     flex-direction: column-reverse;
+  }
+
+  .max-sm\:pt-10 {
+    padding-top: 2.5rem;
   }
 }
 
@@ -1953,6 +2070,22 @@ input:checked + .toggle-bg {
   .sm\:mx-10 {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
+  }
+
+  .sm\:h-screen {
+    height: 100vh;
+  }
+
+  .sm\:h-full {
+    height: 100%;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 }
 
