--- a/Portfolio_v3t/src/styles/output.css
+++ b/Portfolio_v3t/src/styles/output.css
@@ -1247,6 +1247,10 @@ input:checked + .toggle-bg {
   height: 16rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .max-h-64 {
   max-height: 16rem;
 }
@@ -1273,6 +1277,10 @@ input:checked + .toggle-bg {
 
 .w-80 {
   width: 20rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .max-w-60 {
@@ -1536,6 +1544,26 @@ input:checked + .toggle-bg {
   border-color: rgb(3 105 161 / var(--tw-border-opacity));
 }
 
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(63 131 248 / var(--tw-border-opacity));
+}
+
+.border-sky-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(186 230 253 / var(--tw-border-opacity));
+}
+
+.border-sky-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(7 89 133 / var(--tw-border-opacity));
+}
+
+.border-sky-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(12 74 110 / var(--tw-border-opacity));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(28 100 242 / var(--tw-bg-opacity));
@@ -1761,6 +1789,11 @@ input:checked + .toggle-bg {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-sky-200 {
+  --tw-text-opacity: 1;
+  color: rgb(186 230 253 / var(--tw-text-opacity));
+}
+
 .decoration-blue-400 {
   text-decoration-color: #76A9FA;
 }
@@ -1795,6 +1828,18 @@ input:checked + .toggle-bg {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_2px_\#fff\2c inset_0_0_2px_\#fff\2c 0_0_5px_\#08f\2c 0_0_15px_\#08f\2c 0_0_30px_\#08f\] {
+  --tw-shadow: 0 0 2px #fff,inset 0 0 2px #fff,0 0 5px #08f,0 0 15px #08f,0 0 30px #08f;
+  --tw-shadow-colored: 0 0 2px var(--tw-shadow-color), inset 0 0 2px var(--tw-shadow-color), 0 0 5px var(--tw-shadow-color), 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-indigo-500\/50 {
   --tw-shadow-color: rgb(104 117 245 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
@@ -1807,6 +1852,11 @@ input:checked + .toggle-bg {
 
 .shadow-sky-500\/50 {
   --tw-shadow-color: rgb(14 165 233 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-blue-500 {
+  --tw-shadow-color: #3F83F8;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
